Registrar: implementation and test (step 1)