@@ -1,6 +1,7 @@
 package de.team33.cmd.files.job;
 
 import de.team33.cmd.files.common.RequestException;
+import de.team33.cmd.files.testing.Buffer;
 import de.team33.cmd.files.testing.ModifyingTestBase;
 import de.team33.patterns.io.deimos.TextIO;
 import de.team33.testing.io.hydra.FileInfo;
@@ -9,7 +10,7 @@ import org.junit.jupiter.api.Test;
 import java.nio.file.Path;
 import java.nio.file.attribute.FileTime;
 import java.time.Instant;
-import java.util.Arrays;
+import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 
@@ -18,21 +19,37 @@ class RegistrarTest extends ModifyingTestBase {
     private static final FileTime DEFINITE_TIME = FileTime.from(Instant.parse("2024-01-01T00:00:00Z"));
 
     RegistrarTest() {
-        super(ABSOLUTE, InitMode.FILL_BOTH);
+        super(RELATIVE, InitMode.FILL_BOTH);
     }
 
     @Test
-    final void register() throws RequestException {
+    final void register_fs() throws RequestException {
         final Path registryPath = testPath().resolve("registry");
-        final String expected = TextIO.read(RegistrarTest.class, "RegistrarTest-register.txt")
+        final String expected = TextIO.read(RegistrarTest.class, "RegistrarTest-register_fs.txt")
                                       .formatted(testPath().getFileName());
 
-        Registrar.job(MUTE, Arrays.asList("files", "register", leftPath().toString(), registryPath.toString(), "0"))
+        Registrar.job(MUTE, List.of("files", "register", leftPath().toString(), registryPath.toString(), "0"))
                  .run();
-        Registrar.job(MUTE, Arrays.asList("files", "register", rightPath().toString(), registryPath.toString(), "0"))
+        Registrar.job(MUTE, List.of("files", "register", rightPath().toString(), registryPath.toString(), "0"))
                  .run();
 
         final String result = FileInfo.of(testPath()).toString();
+        assertEquals(expected, result);
+    }
+
+    @Test
+    final void register_out() throws RequestException {
+        final Buffer buffer = new Buffer();
+        final Path registryPath = testPath().resolve("registry");
+        final String expected = TextIO.read(RegistrarTest.class, "RegistrarTest-register_out.txt")
+                                      .formatted(testPath().getFileName());
+
+        Registrar.job(buffer, List.of("files", "register", leftPath().toString(), registryPath.toString(), "0"))
+                 .run();
+        Registrar.job(buffer, List.of("files", "register", rightPath().toString(), registryPath.toString(), "0"))
+                 .run();
+
+        final String result = buffer.toString();
         assertEquals(expected, result);
     }
 }
